fix: band localstorage logic, grid card img on mobile

--- a/src/components/ChartsPage/ChartsPage.module.css
+++ b/src/components/ChartsPage/ChartsPage.module.css
@@ -20,8 +20,8 @@
 
 @media screen and (min-width: 0px) and (max-width: 640px) {
   .container {
-    height: 350px;
-    width: 350px;
+    height: 300px;
+    width: 300px;
   }
 
   .borderRight,
