--- a/src/components/DataTable/Table.module.css
+++ b/src/components/DataTable/Table.module.css
@@ -243,16 +243,7 @@ select.search {
   grid-gap: 20px;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  .grid {
-    grid-template-columns: 1fr;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 900px) {
-  .grid {
-    grid-template-columns: 1fr 1fr;
-  }
-}
+
 
 .card {
   width: 100%;
@@ -300,6 +291,25 @@ select.search {
   background: #2C0732;
   background: linear-gradient(143deg, #000 7.25%, #2C0732 57.22%, rgba(42, 1, 49, 0.91) 89.5%),
     #FFF;
+}
+
+@media screen and (min-width: 0px) and (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .card img,
+  .cardImgPlaceholder {
+    height: 180px;
+    overflow: hidden;
+    object-position: 0px 10%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 900px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .cardBody {
