--- a/src/components/MediaPlayer/MediaPlayer.module.css
+++ b/src/components/MediaPlayer/MediaPlayer.module.css
@@ -49,6 +49,7 @@
   /* background-color: red; */
   display: flex;
   flex-direction: row;
+  gap: 1em;
 }
 
 .summary {
